--- a/TODO-APP/styles.css
+++ b/TODO-APP/styles.css
@@ -51,13 +51,20 @@ img{
    width: 40px;
    height:40px;
 }
-h1{
+.title{
    font-size: 42px;
 }
-p{
+.task-item{
    padding: 1px;
    line-height: 2px;
    border-bottom: 2px;
    margin-bottom: 2px;
    margin-top:2px
+}
+.task-item::before{
+
+}
+
+.checkbox-task{
+   width: 20px;
 }
