--- a/javascript/styles.css
+++ b/javascript/styles.css
@@ -29,7 +29,7 @@ text-align: center;
 .button-hover{
    
 }*/
-
+/*
 body{
    background-image: url(premium_photo-1697729862026-8f486fcd7f8b.jpeg);
    background-position: center;
@@ -40,7 +40,7 @@ body{
 
 }
 
-#clock-container{
+#container{
  justify-content: center;
  align-items: center;
  height: 100vh;
@@ -54,4 +54,31 @@ body{
    text-align: center;
    backdrop-filter: blur(2px);
    width: 100%;
+}*/
+
+body{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   background-color: hsl(0, saturation, 90%);
+}
+
+#myH1{
+   font-size: 4rem;
+
+   font-family: monospace;
+   color:black;
+}
+
+#display{
+   font-size: 5rem;
+   font-family: monospace;
+   font-weight: bold;
+   margin-bottom: 25px;
+}
+
+
+#controls{
+   text-align: center;
+   width: 300px;
 }
