--- a/javascript/styles.css
+++ b/javascript/styles.css
@@ -55,7 +55,7 @@ body{
    backdrop-filter: blur(2px);
    width: 100%;
 }*/
-
+/*
 body{
    display: flex;
    flex-direction: column;
@@ -82,3 +82,4 @@ body{
    text-align: center;
    width: 300px;
 }
+   */
