--- a/javascript/styles.css
+++ b/javascript/styles.css
@@ -85,11 +85,8 @@ body{
    */
 
 
-#log-btn{
- 
-   background-color: red;
-   justify-content: center;
-   display: flex;
-   align-items: center;
-   text-align: center;
+#log-btn {
+  position: relative;  /* ya absolute / fixed */
+  top: 0px;
+  left: 0px;
 }
