--- a/javascript/styles.css
+++ b/javascript/styles.css
@@ -83,7 +83,7 @@ body{
    width: 300px;
 }
    */
-
+/*
 .container {
   display: flex;
   gap: 10px;
@@ -106,4 +106,16 @@ body{
 .highlight {
   background: gold;
   transform: scale(1.1);
+}
+  */
+
+.silder{
+  position: relative;
+  width: 100%;
+  margin:auto;
+  overflow: hidden;
+  
+}
+.silder img{
+   width: 100%;
 }
